# reproduce-poetry-virtualenv-issue

./: Dockerfile  README.md  pyproject.toml
