[tool.poetry]
name = "test-repro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "*"
aiofiles = "*"
alembic = "*"
boto3 = "*"
botocore = "*"
celery = {extras = ["redis"], version = "*"}
chardet = "*"
datadog = "*"
ddtrace = "*"
decorator = "*"
environs = "==8.0.0"
fastapi = ">=0.68.1"
iso3166 = "*"
jinja2 = "*"
jsondiff = "*"
lxml = "*"
markdown2 = "*"
mypy-boto3-s3 = "*"
mypy-boto3-sqs = "*"
pillow = "*"
ply = "*"
psycopg2 = "*"
pycountry = "*"
pydantic = "*"
pysftp = "*"
python-dateutil = "*"
python-multipart = "*"
requests = "*"
starlette = "*"
starlette-context = "*"
sqlalchemy-stubs = "*"
urllib3 = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
ipython = "*"
moto = "*"
mypy = "*"
mypy-extensions = "*"
pytest = "*"
pytest-cov = "*"
six = "*"
toml = "*"
types-chardet = "*"
types-decorator = "*"
types-python-dateutil = "*"
types-pytz = "*"
types-requests = "*"
uvicorn = "*"
vulture = "*"
watchdog = {extras = ["watchmedo"], version = "*"}
virtualenv = "^20.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
